log/build_2021-07-24_21-27-24/quad/stdout_stderr.log
running egg_info
writing ../../build/quad/quad.egg-info/PKG-INFO
writing dependency_links to ../../build/quad/quad.egg-info/dependency_links.txt
writing entry points to ../../build/quad/quad.egg-info/entry_points.txt
writing requirements to ../../build/quad/quad.egg-info/requires.txt
writing top-level names to ../../build/quad/quad.egg-info/top_level.txt
reading manifest file '../../build/quad/quad.egg-info/SOURCES.txt'
writing manifest file '../../build/quad/quad.egg-info/SOURCES.txt'
running build
running build_py
copying quad/quad.py -> /home/devpc/Desktop/quad_ws/build/quad/build/lib/quad
running install
running install_lib
copying /home/devpc/Desktop/quad_ws/build/quad/build/lib/quad/quad.py -> /home/devpc/Desktop/quad_ws/install/quad/lib/python3.8/site-packages/quad
byte-compiling /home/devpc/Desktop/quad_ws/install/quad/lib/python3.8/site-packages/quad/quad.py to quad.cpython-38.pyc
running install_data
  File "/home/devpc/Desktop/quad_ws/install/quad/lib/python3.8/site-packages/quad/quad.py", line 20
    self.toggle = !self.toggle
                  ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/devpc/Desktop/quad_ws/install/quad/lib/python3.8/site-packages/quad-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/quad/quad.egg-info to /home/devpc/Desktop/quad_ws/install/quad/lib/python3.8/site-packages/quad-0.0.0-py3.8.egg-info
running install_scripts
Installing quad script to /home/devpc/Desktop/quad_ws/install/quad/lib/quad
writing list of installed files to '/home/devpc/Desktop/quad_ws/build/quad/install.log'
